cdk8s.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cdk8s-deployment-e659e48c
spec:
  replicas: 5
  selector:
    matchLabels:
      app: hello-kubernetes
      tier: frontend
  template:
    metadata:
      labels:
        app: hello-kubernetes
        tier: frontend
    spec:
      containers:
        - image: paulbouwer/hello-kubernetes:1.8
          name: hello-kubernetes
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-kubernetes
    tier: frontend
  name: cdk8s-service-aa269ca4
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: hello-kubernetes
    tier: frontend
  type: LoadBalancer
